# mp2-lab2-matrix

./: CMakeLists.txt
include/: utmatrix.h
samples/: sample_matrix.cpp
test/: test_tmatrix.cpp  test_tvector.cpp
